--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-accelerate==0.17.1
+accelerate
 cpm_kernels==1.0.11
-datasets==2.8.0
+datasets
 gradio==3.35.2
 langchain==0.0.146
 loguru==0.7.0
@@ -9,11 +9,10 @@ modelscope==1.6.1
 numpy==1.22.0
 openTSNE==0.7.1
 pandas==1.5.3
-peft==0.3.0
+peft
 plotly==5.14.1
 python_dateutil==2.8.2
 python_docx==0.8.11
-PyYAML==6.0
 PyYAML==6.0
 regex==2023.3.23
 scikit_learn==1.2.2
@@ -21,9 +20,8 @@ scipy==1.10.1
 sentence_transformers==2.2.2
 sentencepiece==0.1.97
 tensorflow==2.12.0
-torch==1.13.1
 tqdm==4.65.0
-transformers==4.29.1
+transformers<5.0.0
 Cpython
 #pyopenjtalk
 librosa
