--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-accelerate==0.17.1
+accelerate
 cpm_kernels==1.0.11
 datasets==2.8.0
 gradio==3.35.2
@@ -14,25 +14,20 @@ plotly==5.14.1
 python_dateutil==2.8.2
 python_docx==0.8.11
 PyYAML==6.0
-PyYAML==6.0
 regex==2023.3.23
 scikit_learn==1.2.2
 scipy==1.10.1
 sentence_transformers==2.2.2
 sentencepiece==0.1.97
 tensorflow==2.12.0
-torch==1.13.1
+torch==2.0.1
 tqdm==4.65.0
 transformers==4.29.1
 Cpython
 #pyopenjtalk
 librosa
-matplotlib
-numpy
 phonemizer
-scipy
 tensorboard
-torch
 torchvision
 Unidecode
 ffmpeg
@@ -43,11 +38,9 @@ jieba
 keyboard
 sqlparse
 pymysql
-openai
 opencv-python
 moviepy
 zhtts
-tiktoken
 # faiss-gpu
 pygame
 colorama==0.4.6
